--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = "0.2.132"
 redbpf = { version = "2.3.0", features = ["load"] }
 tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
 tracing-subscriber = "0.2"
