Add DNS capture
Need to reconsider kernel-level packet inspection. Are we missing
anything?

--- a/probes/Cargo.toml
+++ b/probes/Cargo.toml
@@ -23,3 +23,8 @@ path = "src/lib.rs"
 name = "network"
 path = "src/network/main.rs"
 required-features = ["probes"]
+
+[[bin]]
+name = "dns"
+path = "src/dns/main.rs"
+required-features = ["probes"]
