--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
 ]
 
 [dependencies]
+dns-parser = "0.8.0"
 libc = "0.2.132"
 redbpf = { version = "2.3.0", features = ["load"] }
 tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
