--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
 async-trait = "0.1.57"
 clap = { version = "3.2.20", features = ["derive"] }
 dns-parser = "0.8.0"
+etherparse = "0.12.0"
 libc = "0.2.132"
 mio = "0.8.4"
 redbpf = { version = "2.3.0", features = ["load"] }
