--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,14 @@ members = [
 [dependencies]
 async-trait = "0.1.57"
 clap = { version = "3.2.20", features = ["derive"] }
-dns-parser = "0.8.0"
+chrono = "0.4.22"
+dns-parser = { version = "0.8.0", features = ["with-serde"] }
 etherparse = "0.12.0"
 libc = "0.2.132"
 mio = "0.8.4"
 redbpf = { version = "2.3.0", features = ["load"] }
+serde = { version = "1.0.144", features = ["derive"] }
+serde_json = "1.0.85"
 tokio = { version = "1.21.0", features = ["full"] }
 tracing-subscriber = "0.2"
 tracing = "0.1"
