--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ mio = "0.8.4"
 redbpf = { version = "2.3.0", features = ["load"] }
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
+tls-parser = "0.11.0"
 tokio = { version = "1.21.0", features = ["full"] }
 tracing-subscriber = "0.3.15"
 tracing = "0.1"
