--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ dns-parser = { version = "0.8.0", features = ["with-serde"] }
 etherparse = "0.12.0"
 libc = "0.2.132"
 mio = "0.8.4"
-redbpf = { version = "2.3.0", features = ["load"] }
+redbpf = { git = "https://github.com/bcelenza/redbpf.git", features = ["load"] }
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 tls-parser = "0.11.0"
