--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -4,7 +4,7 @@
 # documentation.
 # rust-clippy is a tool that runs a bunch of lints to catch common
 # mistakes in your Rust code and help improve your Rust code.
-# More details at https://github.com/rust-lang/rust-clippy 
+# More details at https://github.com/rust-lang/rust-clippy
 # and https://rust-lang.github.io/rust-clippy/
 
 name: rust-clippy analyze
@@ -21,15 +21,22 @@ on:
 jobs:
   rust-clippy-analyze:
     name: Run rust-clippy analyzing
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       security-events: write
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status 
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+      - name: Install required system libraries
+        run: sudo apt update && sudo apt install build-essential
+          libbpf-dev
+          libclang-13-dev
+          libclang-common-13-dev
+          libelf-dev
+          libssl-dev
+          pkg-config
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
         with:
@@ -39,7 +46,12 @@ jobs:
           override: true
 
       - name: Install required cargo
-        run: cargo install clippy-sarif sarif-fmt
+        run: cargo install
+          clippy-sarif
+          sarif-fmt
+
+      - name: Install Cargo BPF utilities
+        run: cargo install cargo-bpf --no-default-features --features=llvm13,command-line
 
       - name: Run rust-clippy
         run:
