--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -37,6 +37,7 @@ jobs:
           libelf-dev
           libssl-dev
           pkg-config
+
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
         with:
@@ -52,6 +53,9 @@ jobs:
 
       - name: Install Cargo BPF utilities
         run: cargo install cargo-bpf --no-default-features --features=llvm13,command-line
+
+      - name: Build BPF code
+        run: make build-probes
 
       - name: Run rust-clippy
         run:
